--- a/app/src/main/res/layout/game_infelator.xml
+++ b/app/src/main/res/layout/game_infelator.xml
@@ -25,11 +25,12 @@
             <ImageView
                 android:id="@+id/gameImage"
                 android:layout_width="106dp"
-                android:layout_height="101dp"
+                android:layout_height="0dp"
                 android:src="@drawable/game_placeholder"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/gameName"
