--- a/app/src/main/res/layout/game_infelator.xml
+++ b/app/src/main/res/layout/game_infelator.xml
@@ -59,12 +59,15 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="104dp"
                 android:layout_marginLeft="104dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 app:backgroundTint="#90CAF9"
                 app:cornerRadius="30dp"
                 app:icon="@drawable/edit_icon"
                 app:iconGravity="textStart"
                 app:iconPadding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/gamePrice" />
 
             <Button
