--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".Activity.MainActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewUser"
         android:layout_width="110dp"
         android:layout_height="130dp"
         android:layout_marginStart="80dp"
@@ -58,7 +59,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardViewGames"
         android:layout_width="110dp"
         android:layout_height="130dp"
         android:layout_marginStart="50dp"
