--- a/app/src/main/res/layout/game_infelator.xml
+++ b/app/src/main/res/layout/game_infelator.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -54,39 +53,25 @@
                 app:layout_constraintStart_toEndOf="@+id/gameImage"
                 app:layout_constraintTop_toBottomOf="@+id/gameName" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/editGame"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
+                style="@style/Widget.MaterialComponents.Button.Icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="104dp"
-                android:layout_marginLeft="104dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 app:backgroundTint="#90CAF9"
                 app:cornerRadius="30dp"
                 app:icon="@drawable/edit_icon"
-                app:iconGravity="textStart"
+                app:iconTint="@color/black"
+                app:iconGravity="start"
+                android:text="edit"
+                android:textColor="@color/black"
                 app:iconPadding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/gamePrice" />
 
-            <Button
-                android:id="@+id/deleteGame"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginBottom="2dp"
-                app:backgroundTint="#DA2967"
-                app:cornerRadius="30dp"
-                app:icon="@drawable/ic_baseline_delete_outline_24"
-                app:iconGravity="textStart"
-                app:iconPadding="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/editGame"
-                android:layout_marginRight="6dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
