--- a/app/src/main/res/layout/activity_single_gmae.xml
+++ b/app/src/main/res/layout/activity_single_gmae.xml
@@ -7,7 +7,7 @@
     tools:context=".Activity.singleGmae">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/gameImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="36dp"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/reviedGameName2"
+        android:id="@+id/reviewdGameName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -39,5 +39,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/gameImage" />
+
+    <TextView
+        android:id="@+id/reviewedGamePrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reviewdGameName2" />
+
+    <TextView
+        android:id="@+id/reviewdGameDescription"
+        android:layout_width="340dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="44dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.394"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reviewedGamePrice" />
 </androidx.constraintlayout.widget.ConstraintLayout>
