--- a/app/src/main/res/layout/activity_games_dashborad.xml
+++ b/app/src/main/res/layout/activity_games_dashborad.xml
@@ -49,11 +49,10 @@
         android:layout_width="381dp"
         android:layout_height="53dp"
         android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginBottom="8dp"
+        android:visibility="invisible"
         app:cardBackgroundColor="#DFDFDF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
