--- a/app/src/main/res/layout/activity_add_servey.xml
+++ b/app/src/main/res/layout/activity_add_servey.xml
@@ -8,7 +8,7 @@
 
     <RatingBar
         android:id="@+id/usrrateing"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -47,5 +47,17 @@
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:onClick="saveReview"
+        android:text="Save Review"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userComment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
